--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,3 +5,29 @@ body {
     rgb(100, 51, 161) 93.9%
   );
 }
+.a {
+  text-align: center;
+}
+
+.row {
+  border: 1.5px solid grey;
+  padding: 2px;
+  margin:40px;
+}
+
+.b {
+  width: 300;
+  padding: 2px;
+text-align: right;
+  color: grey;
+}
+.p {
+  text-align: right;
+}
+h6 {
+  line-height: 0.1px;
+  color: grey;
+}
+.col {
+  line-height: 0.5px;
+}
